force-app/main/default/objects/RM_Deal_Credit__c/RM_Deal_Credit__c.object-meta.xml
<CustomObject>
    <description>Per-RM attributed sales credit for Opportunities. Single deals get one 100% row; share deals get two 50% rows.</description>
    <label>RM Deal Credit</label>
    <nameField>
        <displayFormat>RDC-{00000}</displayFormat>
        <label>RM Deal Credit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RM Deal Credits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>