force-app/main/default/objects/RM_Deal_Credit__c/fields/Credit_Percent__c.field-meta.xml
<CustomField>
    <fullName>Credit_Percent__c</fullName>
    <label>Credit Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>