force-app/main/default/objects/RM_Deal_Credit__c/fields/RM__c.field-meta.xml
<CustomField>
    <fullName>RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RM</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>RM Deal Credits</relationshipLabel>
    <relationshipName>RM_Deal_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>